using UnityEngine;

public static class PuncherAnimatorHashes
{
    // animation IDs
    public static readonly int Attack = Animator.StringToHash("Attack");
    public static readonly int Chase = Animator.StringToHash("Chase");
    public static readonly int Dead = Animator.StringToHash("Dead");
    public static readonly int WalkBlend = Animator.StringToHash("WalkBlend");
}
